--- a/teams.css
+++ b/teams.css
@@ -19,6 +19,18 @@
     margin: 0 auto;
 }
 
+table {
+    margin: auto;
+}
+
+td:nth-child(even) {
+    background-color: lightgray;
+}
+
+td {
+    padding: 10px;
+}
+
 
 #logo {
     flex-direction: row;
@@ -275,7 +287,7 @@ color: rgb(75, 230, 75);
 }
 
 #show_hide_lineup, 
-#show_hide_league {
+#show_league {
     margin-left: 3%;
     background-color: var(--blue);
     color: white;
