--- a/teams.css
+++ b/teams.css
@@ -12,12 +12,23 @@
 
 .menubar {
 position: fixed;
-top: 0px;
+top: 20px;
+width: 100%;
+height: 70px;
+background-color: rgb(110, 110, 230);
+}
+
+.menubuttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 ul {
 display: flex;
 list-style-type: none;
+
 }
 
 ul li a {
@@ -35,7 +46,7 @@ margin: 0 5px;
     width: 70%;
     padding: 10px 0;
     margin-bottom: 20px;
-    margin: 0 auto;
+    margin: 150px auto;
 }
 
 table {
@@ -102,6 +113,7 @@ label {
 
 .btn_container {
    margin: 10% auto;
+   padding: 10px;
    max-width: 500px;
 }
 
