removed background-color

--- a/teams.css
+++ b/teams.css
@@ -19,7 +19,7 @@ position: fixed;
 top: 20px;
 width: 100%;
 height: 70px;
-background-color: rgb(110, 110, 230);
+/*background-color: rgb(110, 110, 230); */
 }
 
 .menubuttons {
