--- a/teams.css
+++ b/teams.css
@@ -22,6 +22,12 @@ height: 70px;
 /*background-color: rgb(110, 110, 230); */
 }
 
+.center_buttons {
+    justify-content: center;
+    display: flex;
+}
+
+
 .menubuttons {
     display: flex;
     justify-content: center;
@@ -41,6 +47,7 @@ padding: 10px;
 width: 150px;
 color:white;
 margin: 0 5px;
+cursor :pointer;
 }
 
 .title_container,
