--- a/teams.css
+++ b/teams.css
@@ -3,9 +3,10 @@
     --lightgray:  rgb(246, 246, 246);
     --blue: blue;
     --black: rgb(31, 28, 28);
-    --grassgreen: #35682D;
+    --grassgreen: #7ee26e;
 }
 
+.menubar
 .main_container,
 .main_container_lineup_coach,
 .title_container, a  {
@@ -14,6 +15,15 @@
 
 .top_standings {
     margin: 120px 0 auto;
+}
+
+.fixed_menubar {
+    width: 600px; 
+    top: 12%; 
+    left: 45%;
+    height: 44px; 
+    margin-top: -100px; 
+    margin-left: -250px
 }
 
 .menubar {
@@ -44,7 +54,7 @@ list-style-type: none;
 }
 
 ul li a {
-background-color: var(--blue);
+background-color: var(--black);
 padding: 10px;
 color:white;
 margin: 0 5px;
@@ -64,7 +74,7 @@ cursor :pointer;
 }
 
 .container_league_logos {
-    margin: 0 auto;
+    margin: 10px auto;
     max-height: fit-content;
     width: 600px;
     background-color: var(--grassgreen);
@@ -260,7 +270,7 @@ a {
     height: fit-content;
 }
 
-.flag_container p, .white_color {
+.white_color {
     color: white;
 }
 
@@ -435,10 +445,6 @@ color: rgb(75, 230, 75);
 
 @media (max-width: 700px) {
 
-    .title_container {
-        width: 90%;
-    }
-
     .main_container, 
     .main_container_event, 
     .btn_lineup, 
@@ -457,7 +463,8 @@ color: rgb(75, 230, 75);
 
 @media (max-width: 600px) {
 
-.container_league_logos {
+.container_league_logos, 
+.title_container {
     width: 400px;
 }
 }
