--- a/teams.css
+++ b/teams.css
@@ -31,7 +31,7 @@
 position: fixed;
 top: 20px;
 width: 100%;
-height: 70px;
+height: 20px;
 /*background-color: rgb(110, 110, 230); */
 }
 
@@ -45,7 +45,6 @@ height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 ul {
@@ -56,6 +55,7 @@ list-style-type: none;
 
 ul li a {
 background-color: var(--black);
+display: block;
 padding: 10px;
 color:white;
 margin: 0 5px;
