--- a/teams.css
+++ b/teams.css
@@ -56,12 +56,11 @@ list-style-type: none;
 }
 
 ul li a {
-background-color: var(--black);
+/* background-color: var(--black); */
 display: block;
 padding: 10px;
 color:white;
 margin: 0 5px;
-cursor :pointer;
 width: 150px;
 text-align: center;
 }
