--- a/teams.css
+++ b/teams.css
@@ -493,8 +493,10 @@ color: rgb(75, 230, 75);
 .title_container, 
 #standing_update, 
 .main_container,
+.main_container_event,
+.main_container_lineup,
 table {
-    width: 400px;
+   width: 500px;
    margin: 10px auto;
 }
 
