--- a/teams.css
+++ b/teams.css
@@ -37,6 +37,12 @@ width: 100%;
 height: 2px;
 }
 
+#agenda {
+    width: 30px;
+    height: 30px;
+    margin-top: 25%;
+}
+
 .center_buttons {
     justify-content: center;
     display: flex;
@@ -296,11 +302,13 @@ a {
     text-align: center;
 }
 
-.flag_container {
+.flag_container, 
+.flag_container img {
     /* display: flex; */
     justify-content: center;
     align-items: center;
     height: fit-content;
+    padding: 20px;
 }
 
 .white_color {
@@ -547,15 +555,24 @@ margin-top: 20px;
 }
 }
 
+@media (max-width: 500px) {
+    ul li a {
+        width: 100px;
+    }
+}
+
 @media (max-width: 450px) {
 
-  .main_container {
+  .main_container, 
+  .main_container_event,
+.main_container_lineup {
     width: 350px;
+    height: 200px;
   }
 
     .country_container,
     .stscore_container {
-    width: 80px;
+    width: 60px;
     height: 130px;
     }
 
