--- a/teams.css
+++ b/teams.css
@@ -471,6 +471,7 @@ color: rgb(75, 230, 75);
   
     .flag_container img {
         width: 125px;
+        height: auto;
     }
 
     .align-right {
