--- a/teams.css
+++ b/teams.css
@@ -37,6 +37,14 @@ width: 100%;
 height: 2px;
 }
 
+#table_txt::after {
+    content: "Toon stand";
+} 
+
+#prog_txt::after {
+    content: "Toon programma";
+} 
+
 #agenda {
     width: 30px;
     height: 30px;
@@ -118,10 +126,6 @@ td {
 }
 
 
-.main_container_league_season_rounds {
-    display: flex;
-}
-
 .container_big_logo_league {
     width: 25%;
 }
@@ -167,9 +171,7 @@ label {
 }
 
 .btn_container {
-   padding: 10px;
-   width: 75%;
-   margin: 3% 0 0 20%;
+     text-align: center;
 }
 
 label {
@@ -547,6 +549,10 @@ margin-top: 20px;
     width: 100px;
 }
 
+.main_container_league_season_rounds img {
+    padding-top: 20px;
+}
+
 .btn_container {
     padding: 0px;
 }
@@ -559,6 +565,14 @@ margin-top: 20px;
     ul li a {
         width: 100px;
     }
+
+    #table_txt::after {
+    content: "Stand";
+} 
+
+#prog_txt::after {
+    content: "Programma";
+} 
 }
 
 @media (max-width: 450px) {
