--- a/teams.css
+++ b/teams.css
@@ -394,9 +394,8 @@ img {
 }
 
 .background_score_small_screens {
-    padding: 5% 10%;
+    padding: 0%;
 }
-
 
 .pd_score {
  padding: 5% 10%;
@@ -653,7 +652,10 @@ a  {
 
 .background_score_small_screens {
     background-color: whitesmoke;
-    padding: 5% 10%;
+   }
+
+.padding_background_score_small_screens {
+    padding: 5% 10%;;
 }
 
 .pd_score {
