--- a/teams.css
+++ b/teams.css
@@ -55,6 +55,11 @@ height: 2px;
     margin-top: 25%;
 }
 
+#day {
+    background-color: #002e61;
+    color: white;
+}
+
 .center_buttons {
     justify-content: center;
     display: flex;
