--- a/teams.css
+++ b/teams.css
@@ -69,6 +69,20 @@ height: 2px;
     height: auto;
 }
 
+.container_league_logo_name {
+    display: flex;
+     width: 600px;
+     align-content: center; 
+     flex-wrap: wrap;
+}
+
+#league_logo {
+    margin: 0 15px;
+    width: 25px;
+    height: auto;
+
+}
+
 .center_buttons {
     justify-content: center;
     display: flex;
@@ -103,8 +117,7 @@ text-align: center;
 .main_container_event
  {
     width: 600px;
-    margin-bottom: 20px;
-    margin: 50px auto 0px;
+    margin: 3% auto 0px;
     flex-wrap: wrap;
     align-content: center;
 }
