--- a/teams.css
+++ b/teams.css
@@ -72,12 +72,11 @@ height: 2px;
 .container_league_logo_name {
     display: flex;
      width: 600px;
-     align-content: center; 
-     flex-wrap: wrap;
+     justify-content: center; 
 }
 
 #league_logo {
-    margin: 0 15px;
+    margin-right: 15px ;
     width: 25px;
     height: auto;
 
