--- a/teams.css
+++ b/teams.css
@@ -69,6 +69,15 @@ height: 2px;
     height: auto;
 }
 
+.container_dates {
+    width: fit-content; 
+    margin: 0 15px;
+}
+
+.highlight_date {
+    background-color: red;
+}
+
 .container_league_logo_name {
     display: flex;
      width: 600px;
