--- a/teams.css
+++ b/teams.css
@@ -84,7 +84,7 @@ height: 2px;
     display: flex;
      width: 600px;
      justify-content: left; 
-     margin: 0 auto;
+     margin: 30px auto 0px;
 }
 
 .container_league_logo_name a {
