--- a/teams.css
+++ b/teams.css
@@ -689,13 +689,21 @@ table {
     font-size: 15px;
 }
 
+#ref {
+    display: none;
+}
+
+#ref::after {
+    content: "Scheidsrechter: ";
+}
+
 table {
     width: 400px;
 }
 
 a  {
    margin: 0 5px;
-   width: 350px;
+/*   width: 350px; */
    }
 
     .stscore_container {
