--- a/teams.css
+++ b/teams.css
@@ -49,7 +49,7 @@ height: 2px;
     content: "Toon programma";
 } 
 
-#agenda {
+#agenda, #shirt {
     width: 30px;
     height: 30px;
 }
@@ -86,12 +86,25 @@ height: 2px;
     margin: auto;   
 }
 
-.container_league_logo_name {
+.container_league_logo_name, 
+.container_sortby_league_time {
     display: flex;
      width: 600px;
      justify-content: left; 
      margin: 30px auto 0px;
 }
+
+.container_sortby_league_time {
+    justify-content: center;
+    
+}
+
+#ob_time, #ob_league {
+    height: 15px;
+    margin: 2% 10px;
+    width: 15px;
+}
+
 
 .container_league_logo_name a {
     padding: 30px 0 0 0;
