--- a/teams.css
+++ b/teams.css
@@ -750,8 +750,8 @@ table {
 }
 
 a  {
-   /* margin: 0 5px; */
-   width: 350px; 
+   /* margin: 0 5px;
+   width: 350px;  */
    }
 
     .stscore_container {
