--- a/teams.css
+++ b/teams.css
@@ -482,6 +482,8 @@ img {
     background-color: whitesmoke;
     font-size: 60px;
     margin: 10%;
+    display: flex;
+    align-items: center;
 }
 
 .background_score_small_screens {
