--- a/teams.css
+++ b/teams.css
@@ -778,7 +778,7 @@ table {
  .score_home, 
 .score_away {
     margin: 0;
-    max-height: 80px;
+    height: 75px;
 }
 
 .background_score_small_screens {
