--- a/teams.css
+++ b/teams.css
@@ -196,7 +196,8 @@ text-align: center;
     display: flex;
 }
 
-.container_league_logos {
+.container_league_logos, 
+.menu_dates {
    text-align: center;
    max-height: fit-content;
    overflow: auto;
@@ -267,8 +268,12 @@ label, td {
 #season_title, 
 label {
     font-size: 25px;
-   
 }
+
+#season_title {
+    margin-top: 50px;
+}
+
 
 .extra_padding {
     padding: 20px 0px;
@@ -426,9 +431,10 @@ a {
 }
 
 img {
-    width: 150px;
+    max-width: 100%;
     height: auto;
     margin: 0 auto 5%;
+    
 }
 
 .league_icon {
@@ -619,6 +625,7 @@ color: rgb(75, 230, 75);
  }
 
 .container_league_logos, 
+.menu_dates,
 .title_container, 
 .main_container,
 .main_container_event,
