--- a/teams.css
+++ b/teams.css
@@ -248,6 +248,10 @@ tr:nth-child(odd) {
     background-color: rgb(229, 223, 223);
 }
 
+tr:nth-child(even) {
+    background-color: rgb(173, 171, 171);
+}
+
 td {
     padding: 10px;
     text-align: center;
